option to create IndexedREferences in map contents